# WizardRoguelike

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FEASIBILITY_ANALYSIS.md  README.md  conftest.py  pyproject.toml
src/game/: constants.py  main.py  replay_viewer.py
src/game/ai/: __init__.py  base_ai.py
src/game/content/: buffs_common.py  consumables.py  equipment.py
src/game/core/: actions.py  buff.py  cloud.py  events.py  level.py  prop.py  rng.py  shapes.py  spell_base.py  tile.py  types.py  unit.py
src/game/crafting/: component_upgrades.py  components.py  cost_calculator.py  recipe_validator.py  spell_factory.py  spell_library.py  synergies.py
src/game/game/: game_state.py  serialization.py
src/game/generation/: biomes.py  level_generator.py  populator.py  room_builders.py  terrain.py
tests/: conftest.py
tests/crafting/: test_all_combinations.py  test_modifier_stacking.py
tests/generation/: test_connectivity.py  test_room_types.py
tests/integration/: test_combat_sequence.py  test_equipment.py  test_level_advance.py  test_pierce_damage.py  test_save_load.py  test_stun_freeze.py
tests/property/: test_damage_invariants.py  test_spell_fuzz.py
tests/replay/: recorder.py  replayer.py  test_replay_determinism.py
tests/simulation/: claude_judge.py  headless_bot.py  smart_bot.py  test_full_run.py
tests/unit/: test_ai.py  test_buff.py  test_consumables.py  test_crafting.py  test_damage.py  test_events.py  test_lairs.py  test_masteries.py  test_pathfinding.py  test_shapes.py  test_spell_base.py  test_synergies.py  test_unit.py
(+47 files in other folders)
