[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wizard-roguelike"
version = "0.1.0"
description = "A tactical roguelike with spell crafting"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.4.0",
    "tcod>=16.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "coverage>=7.0",
]

[project.scripts]
wizard-roguelike = "game.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmarks",
    "property: Hypothesis property-based tests",
]
timeout = 30

[tool.coverage.run]
source = ["src/game"]
omit = ["src/game/rendering/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
